2006-10-11  Karl Runge <runge@karlrunge.com>
	* x11vnc: -cursor_drag for DnD, etc.

2006-09-23  Karl Runge <runge@karlrunge.com>
	* Java viewer: improvements to connection response, faster
	  connections.
	* x11vnc: some cleanup for -unixpw login process.

2006-09-20  Karl Runge <runge@karlrunge.com>
	* x11vnc: -unixpw_cmd, -passwfile cmd:/custom:, -sslnofail,
	  -ultrafilexfer

2006-09-17  Karl Runge <runge@karlrunge.com>
	* x11vnc: move some info printout to -v, -verbose mode.  Add 
	  -connect_or_exit option.  Have -rfbport 0 lead to no TCP
	  listening.  Eliminate double certificates in .pem files.
	  Always print SSL certificate to the screen to aid pasting.

2006-09-15  Karl Runge <runge@karlrunge.com>
	* x11vnc: allow user set signals to ignore, clear DISPLAY in 
	  -unixpw su_verify. -rawfb none same as null. 
	* rfbserver.c: shorten rfbEncodingNewFBSize message.

2006-09-13  Karl Runge <runge@karlrunge.com>
	* x11vnc: document 'ssh -t' improved keyboard response.  add
	  extra rfbPE() around keystrokes. 
	  misc/enhanced_tightvnc_viewer: incorporate scripts, documentation,
	  etc. for the enhanced tightvnc viewer package.

2006-09-10  Karl Runge <runge@karlrunge.com>
	* x11vnc: minor changes: REQ_ARGS for -sslGenCert, EV_SYN
	  SYN_REPORT check restore cursor most under -display WAIT.

2006-08-10  Karl Runge <runge@karlrunge.com>
	* x11vnc: first pass at touchscreens via uinput.

2006-08-02  Karl Runge <runge@karlrunge.com>
	* x11vnc: add -ssltimeout option; tweak ssl timeouts.

2006-07-28  Karl Runge <runge@karlrunge.com>
	* ssl_vncviewer: remove some bashisms, add features.
	* x11vnc: -rotate option (e.g. handheld), fix FPE on tru64.

2006-07-17  Karl Runge <runge@karlrunge.com>
	* x11vnc: enable --without-x builds for -rawfb only (NO_X11)

2006-07-11  Karl Runge <runge@karlrunge.com>
	* x11vnc: more tweaks to UINPUT, mostly mouse motion.

2006-07-08  Karl Runge <runge@karlrunge.com>
	* x11vnc: add uinput support (-pipeinput UINPUT:...) for full