@@ -2,7 +2,7 @@
 .TH X11VNC "1" "October 2006" "x11vnc " "User Commands"
 .SH NAME
 x11vnc - allow VNC connections to real X11 displays
-         version: 0.8.3, lastmod: 2006-10-11
+         version: 0.8.3, lastmod: 2006-10-29
 .SH SYNOPSIS
 .B x11vnc
 [OPTION]...
